# hpp-hrp2

./: CMakeLists.txt
src/hpp/corbaserver/hrp2/: __init__.py  robot.py
src/hpp/corbaserver/manipulation/hrp2/: robot.py
